# dice-calculator

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  dice.pest  distribution.rs  lib.rs  main.rs
