[package]
edition = "2021"
name = "dice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from-pest = "0.3.2"
itertools = "0.12.1"
num = "0.4.1"
pest = {version = "2.7.8", features = ["pretty-print"]}
pest-ast = "0.3.4"
pest_derive = "2.7.8"
